Hair density influence bug bug #44185

Closed
opened 2015-03-29 22:25:25 +02:00 by Alexey · 16 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: All
Worked: None

Short description of error
1.png
2.png
3.png
4.png
5.png
6.png
Exact steps for others to reproduce the error
Dencity_influence_bug.blend
open, switch on dencity influence, and off again, select any shading mode - working with bug, try to render - working with bug
switch on and off again Time influence - we will see properly work in all shading modes and in render result

**System Information** windows7 64 ASUS ATI Radeon HD6870 **Blender Version** Broken: All Worked: None **Short description of error** ![1.png](https://archive.blender.org/developer/F156162/1.png) ![2.png](https://archive.blender.org/developer/F156164/2.png) ![3.png](https://archive.blender.org/developer/F156166/3.png) ![4.png](https://archive.blender.org/developer/F156168/4.png) ![5.png](https://archive.blender.org/developer/F156170/5.png) ![6.png](https://archive.blender.org/developer/F156172/6.png) **Exact steps for others to reproduce the error** [Dencity_influence_bug.blend](https://archive.blender.org/developer/F156174/Dencity_influence_bug.blend) open, switch on dencity influence, and off again, select any shading mode - working with bug, try to render - working with bug switch on and off again Time influence - we will see properly work in all shading modes and in render result
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Author

All other influence setting working properly in all shading modes and in render

All other influence setting working properly in all shading modes and in render
Author

In emitter type all working properly

In emitter type all working properly
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions
Member

Hi @Inwader77,

I tried to reproduce that with Blender 2.74-RC4 and couldn't... so maybe this bug is already fixed or it's machine dependant. Please try it again with a RC4 build and report again..

Greetings, Thomas

Hi @Inwader77, I tried to reproduce that with Blender 2.74-RC4 and couldn't... so maybe this bug is already fixed or it's machine dependant. Please try it again with a RC4 build and report again.. Greetings, Thomas

Added subscriber: @chrisr

Added subscriber: @chrisr

@plasmasolutions, that's weird... I have this bug with the latest build. Win7 64. Do you have a different platform? Also, the conditions are pretty specific. This doesn't occur with child particles enabled for example. And when setting density influence to sth different than 1.0, occurs only after second on/off switch.

@plasmasolutions, that's weird... I have this bug with the latest build. Win7 64. Do you have a different platform? Also, the conditions are pretty specific. This doesn't occur with child particles enabled for example. And when setting *density influence* to sth different than 1.0, occurs only after second on/off switch.
Member

Hey @chrisr,

did you open this exact file that is linked here? I'm on win7 64 bit atm (where it doesn't happen) and will try that on my linux machine too in the afternoon.

Hey @chrisr, did you open this exact file that is linked here? I'm on win7 64 bit atm (where it doesn't happen) and will try that on my linux machine too in the afternoon.

@plasmasolutions - Yeah, I opened this exact file, and also made my own test (make hair particle system, assign a texture to density, even without custom material). It was strange because when I made my own test, it also didn't happen a few times, and now it happens always. Maybe there are even more specific conditions?

@plasmasolutions - Yeah, I opened this exact file, and also made my own test (make hair particle system, assign a texture to density, even without custom material). It was strange because when I made my own test, it also didn't happen a few times, and now it happens always. Maybe there are even more specific conditions?
Author

In #44185#299277, @plasmasolutions wrote:
Hi @Inwader77,

I tried to reproduce that with Blender 2.74-RC4 and couldn't... so maybe this bug is already fixed or it's machine dependant. Please try it again with a RC4 build and report again..

Greetings, Thomas

I was repeat it on (c16a898)
Image1.png

> In #44185#299277, @plasmasolutions wrote: > Hi @Inwader77, > > I tried to reproduce that with Blender 2.74-RC4 and couldn't... so maybe this bug is already fixed or it's machine dependant. Please try it again with a RC4 build and report again.. > > Greetings, Thomas I was repeat it on (c16a898) ![Image1.png](https://archive.blender.org/developer/F156893/Image1.png)
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Hi @Inwader77...

I had time now to test it with yesterdays Blender (2d88020) under Ubuntu Linux 64 and can confirm it! @LukasTonne would you have a look at it?

Greetings,
Thomas

Hi @Inwader77... I had time now to test it with yesterdays Blender (2d88020) under Ubuntu Linux 64 and can confirm it! @LukasTonne would you have a look at it? Greetings, Thomas
Krzysztof Rećko self-assigned this 2015-04-01 19:27:16 +02:00

This issue was referenced by dced56f02a

This issue was referenced by dced56f02a42481de167dd45542adf6dae2d039d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit dced56f02a.

Closed by commit dced56f02a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44185
No description provided.