Fix T44185, Fix T44090: hair texture density working unreliable.

"Unexisting" particles must be freed after the unexist flag has been set,
which was no longer the case after 78c491e62a5.

Reviewers: brecht

Differential Revision: https://developer.blender.org/D1213